--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   border: 3px solid black;
   overflow: hidden;
